--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Lessons</h2>
             <h3 class="section-subheading text-muted">
-              Everything you have to know:
+              This site aims to collect as much informations as possible and to synthesize it to know everything about GDPR.
             </h3>
           </div>
         </div>
@@ -323,9 +323,25 @@
             </a>
             <div class="gdpr-caption">
               <h4>Conclusion</h4>
-              <p class="text-muted">
-                Why is GDPR so important?
-              </p>
+              <p class="text-muted">Why is GDPR so important?</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 gdpr-item">
+            <a class="gdpr-link" data-toggle="modal" href="#gdprModal13">
+              <div class="gdpr-hover">
+                <div class="gdpr-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img
+                class="img-fluid"
+                src="https://picsum.photos/400/300"
+                alt=""
+              />
+            </a>
+            <div class="gdpr-caption">
+              <h4>Sources</h4>
+              <p class="text-muted">All the sources</p>
             </div>
           </div>
         </div>
@@ -1227,17 +1243,65 @@
                     alt=""
                   />
                   <p>
-                    To conclude, we can say that GDPR is important because it improves the protection of
-                    European data subjects’ rights and clarifies what companies
-                    that process personal data must do to safeguard these
-                    rights. All companies and organisations that deal with data
-                    relating to EU citizens must comply by the new GDPR. Most
-                    companies are processing some personal data on a regular
-                    basis. The GDPR has severe implications for non-compliance –
-                    the consequences could be heavy fines and a damaged
-                    reputation. GDPR allows for massive penalties of up €20m or,
-                    if higher, as much as four percent of global revenue.
+                    To conclude, we can say that GDPR is important because it
+                    improves the protection of European data subjects’ rights
+                    and clarifies what companies that process personal data must
+                    do to safeguard these rights. All companies and
+                    organisations that deal with data relating to EU citizens
+                    must comply by the new GDPR. Most companies are processing
+                    some personal data on a regular basis. The GDPR has severe
+                    implications for non-compliance – the consequences could be
+                    heavy fines and a damaged reputation. GDPR allows for
+                    massive penalties of up €20m or, if higher, as much as four
+                    percent of global revenue.
                   </p>
+                  <button
+                    class="btn btn-primary"
+                    data-dismiss="modal"
+                    type="button"
+                  >
+                    <i class="fas fa-times"></i>
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 12 -->
+    <div
+      class="gdpr-modal modal fade"
+      id="gdprModal13"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <h2 class="text-uppercase">Sources</h2>
+                  <img
+                    class="img-fluid d-block mx-auto"
+                    src="https://picsum.photos/300/400"
+                    alt=""
+                  />
+                  <p><a href="https://gdpr.eu/">gdpr.eu</a></p>
+                  <p><a href="https://wikipedia.org">wikipedia.org</a></p>
+                  <p><a href="https://www.futurelearn.com/">futurelearn.com</a></p>
+                  <p><a href="https://myicaas.com/">myicaas.com</a></p>
+                  <p><a href="https://www.privacypolicies.com/">privacypolicies.com</a></p>
+                  <p><a href="https://www.hipaajournal.com/">hipaajournal.com</a></p>
                   <button
                     class="btn btn-primary"
                     data-dismiss="modal"
