custom images added

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/1.jpeg"
                 alt=""
               />
             </a>
@@ -132,7 +132,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/5.jpeg"
                 alt=""
               />
             </a>
@@ -151,7 +151,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -171,7 +171,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -189,7 +189,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -207,7 +207,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -225,7 +225,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -243,7 +243,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -261,7 +261,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -279,7 +279,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/protection.jpeg"
                 alt=""
               />
             </a>
@@ -297,7 +297,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/rights.png"
                 alt=""
               />
             </a>
@@ -317,7 +317,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/conclusion.jpeg"
                 alt=""
               />
             </a>
@@ -335,7 +335,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="https://picsum.photos/400/300"
+                src="./img/2.png"
                 alt=""
               />
             </a>
@@ -368,7 +368,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -389,7 +389,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -409,7 +409,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -429,7 +429,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -448,7 +448,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -470,7 +470,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -490,7 +490,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -511,7 +511,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -531,7 +531,7 @@
                 <div class="timeline-image">
                   <img
                     class="rounded-circle img-fluid"
-                    src="https://picsum.photos/200"
+                    src="./img/eu.png"
                     alt=""
                   />
                 </div>
@@ -614,7 +614,7 @@
                   <h2 class="text-uppercase">What is GDPR?</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/1.jpeg"
                     alt=""
                   />
                   <p>
@@ -667,7 +667,7 @@
                   <p class="item-intro text-muted">All the lexicon to know</p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/5.jpeg"
                     alt=""
                   />
                   <p>
@@ -743,7 +743,7 @@
                   </p>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>1 - Lawfulness, fairness and transparency.</p>
@@ -793,7 +793,7 @@
                   </h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -845,7 +845,7 @@
                   <h2 class="text-uppercase">2 - Purpose limitation</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -896,7 +896,7 @@
                   <h2 class="text-uppercase">3 - Data minimisation</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -944,7 +944,7 @@
                   <h2 class="text-uppercase">4 - Accuracy</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -992,7 +992,7 @@
                   <h2 class="text-uppercase">5 - Storage limitation</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -1045,7 +1045,7 @@
                   </h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -1098,7 +1098,7 @@
                   </h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/protection.jpeg"
                     alt=""
                   />
                   <p>
@@ -1147,7 +1147,7 @@
                   <h2 class="text-uppercase">Rights of Data Subjects</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/rights.png"
                     alt=""
                   />
                   <p>
@@ -1239,7 +1239,7 @@
                   <h2 class="text-uppercase">Conclusion</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/conclusion.jpeg"
                     alt=""
                   />
                   <p>
@@ -1293,7 +1293,7 @@
                   <h2 class="text-uppercase">Sources</h2>
                   <img
                     class="img-fluid d-block mx-auto"
-                    src="https://picsum.photos/300/400"
+                    src="./img/2.png"
                     alt=""
                   />
                   <p><a href="https://gdpr.eu/">gdpr.eu</a></p>
