--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                     alt=""
                   />
                   <p>
-                    Personal data — Personal data is any information that
+                    Personal data: Personal data is any information that
                     relates to an individual who can be directly or indirectly
                     identified. Names and email addresses are obviously personal
                     data. Location information, ethnicity, gender, biometric
@@ -681,22 +681,22 @@
                     from it.
                   </p>
                   <p>
-                    Data processing — Any action performed on data, whether
+                    Data processing: Any action performed on data, whether
                     automated or manual. The examples cited in the text include
                     collecting, recording, organizing, structuring, storing,
                     using, erasing… so basically anything.
                   </p>
                   <p>
-                    Data subject — The person whose data is processed. These are
+                    Data subject: The person whose data is processed. These are
                     your customers or site visitors.
                   </p>
                   <p>
-                    Data controller — The person who decides why and how
+                    Data controller: The person who decides why and how
                     personal data will be processed. If you’re an owner or
                     employee in your organization who handles data, this is you.
                   </p>
                   <p>
-                    Data processor — A third party that processes personal data
+                    Data processor: A third party that processes personal data
                     on behalf of a data controller. The GDPR has special rules
                     for these individuals and organizations. They could include
                     cloud servers like Tresorit or email service providers like
